--- a/ChoreImpetus.Core.Android/ChoreImpetus.Core.Android.csproj
+++ b/ChoreImpetus.Core.Android/ChoreImpetus.Core.Android.csproj
@@ -43,19 +43,20 @@
     <Reference Include="System.Core" />
     <Reference Include="Mono.Android" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="MainActivity.cs" />
-    <Compile Include="Resources\Resource.designer.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\AboutResources.txt" />
-    <None Include="Assets\AboutAssets.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\layout\Main.axml" />
-    <AndroidResource Include="Resources\values\Strings.xml" />
-    <AndroidResource Include="Resources\drawable\Icon.png" />
-  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Novell\Novell.MonoDroid.CSharp.targets" />
+  <ItemGroup>
+    <Folder Include="Contracts\" />
+    <Folder Include="DataObjects\" />
+    <Folder Include="Databases\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="SQLite.cs" />
+    <Compile Include="Contracts\IDatabaseEntity.cs" />
+    <Compile Include="Contracts\DatabaseEntity.cs" />
+    <Compile Include="DataObjects\Chore.cs" />
+    <Compile Include="DataObjects\Recurrence.cs" />
+    <Compile Include="Databases\ChoreDatabase.cs" />
+    <Compile Include="ChoreRepository.cs" />
+    <Compile Include="DataObjects\CompletedChore.cs" />
+  </ItemGroup>
 </Project>
