Add Create Chore.
Add colors to ChoreList. button on MainActivity now opens CreateChore. CreateChore can create a chore (no validation right now) or cancel.

--- a/ChoreImpetusAndroid/ChoreImpetusAndroid.csproj
+++ b/ChoreImpetusAndroid/ChoreImpetusAndroid.csproj
@@ -44,10 +44,11 @@
     <Reference Include="Mono.Android" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Adapters\ChoreListAdapter.cs" />
+    <Compile Include="Activities\MainActivity.cs" />
+    <Compile Include="Activities\CreateChore.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -58,6 +59,7 @@
     <AndroidResource Include="Resources\values\Strings.xml" />
     <AndroidResource Include="Resources\drawable\Icon.png" />
     <AndroidResource Include="Resources\layout\ChoreListItem.axml" />
+    <AndroidResource Include="Resources\layout\CreateChore.axml" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Novell\Novell.MonoDroid.CSharp.targets" />
   <ItemGroup>
@@ -68,5 +70,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Adapters\" />
+    <Folder Include="Activities\" />
   </ItemGroup>
 </Project>
