Fix Create button position. Change Edit button size.

--- a/ChoreImpetusAndroid/ChoreImpetusAndroid.csproj
+++ b/ChoreImpetusAndroid/ChoreImpetusAndroid.csproj
@@ -59,7 +59,9 @@
     <None Include="Properties\AndroidManifest.xml" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\layout\Main.axml" />
+    <AndroidResource Include="Resources\layout\Main.axml">
+      <DependentUpon>EditChore.axml</DependentUpon>
+    </AndroidResource>
     <AndroidResource Include="Resources\values\Strings.xml" />
     <AndroidResource Include="Resources\drawable\Icon.png" />
     <AndroidResource Include="Resources\layout\ChoreListItem.axml" />
